--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "start": "nodemon --ext 'ts,js,mjs,json' --exec 'ts-node server.ts'",
+    "dev": "ts-node-dev server.ts",
     "watch": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +20,7 @@
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.2",
+    "@types/uuid": "^10.0.0",
     "express": "^4.21.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
@@ -27,9 +29,13 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "morgan": "^1.10.0",
+    "mysql2": "^3.11.5",
     "nodemon": "^3.1.9",
     "pino": "^9.5.0",
     "pino-http": "^10.3.0",
-    "pino-pretty": "^13.0.0"
+    "pino-pretty": "^13.0.0",
+    "reflect-metadata": "^0.2.2",
+    "ts-node-dev": "^2.0.0",
+    "typeorm": "^0.3.20"
   }
 }
