--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 APP_NAME="Open source headless CMS by OSBD Alliance"
 APP_ENVIRONMENT=development
 PORT=3000
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_NAME=
